@@ -217,7 +217,8 @@ void PriorityScheduler::IRQfindNextThread()
                     miosix_private::MPUConfiguration::IRQdisable();
                 } else {
                     ctxsave=cur->userCtxsave;
-                    cur->proc->mpu.IRQenable();
+                    //A kernel thread is never in userspace, so the cast is safe
+                    static_cast<Process*>(cur->proc)->mpu.IRQenable();
                 }
                 #else //WITH_PROCESSES
                 ctxsave=temp->ctxsave;
